# progetto

./: CMakeLists.txt  CardRenderer.cpp  CardRenderer.hpp  base_graphics.cpp  base_graphics.hpp  basegraphics.cpp  basegraphics.hpp  buttons.cpp  buttons.hpp  card.cpp  card.cpp.save  card.hpp  card.test.cpp  card_renderer.cpp  card_renderer.hpp  card_test.cpp  first_window.cpp  first_window.hpp  game_state.cpp  game_state.hpp  game_state_test.cpp  gamestate.cpp  gamestate.hpp  grafichedabig.cpp  grafichetavolo.cpp  hand.cpp  hand.hpp  hand.test.cpp  hand_test.cpp  main.cpp  main2.0.cpp  main3.cpp  methods.cpp  methods.hpp  methods.main.test.cpp  methods.test.cpp  methods_test.cpp  player.cpp  player.hpp  player_test.cpp  (+3 more)
